# experiment

./: .gitignore  CMakeLists.txt
include/: main.hpp
proisam++/: CMakeLists.txt  proisam.cpp  proisam.hpp
src/: main.cpp
